<resources>
    <string name="app_name">ECE480_DRAFT1</string>
    <string name="header">My Daily Log</string>
    <string name="wakeUp">Wake-Up Questions</string>
    <string name="nap">Nap Questions</string>
    <string name="bedtime">Bedtime Questions</string>
    <string name="reminders">Set Reminders</string>
    <string name="userInfo">My Info</string>
    <string name="help">Help</string>
    <string name="start">Start Light Vision Timer</string>
    <string name="logout">Log Out</string>
    <string name="wakeUpDesc">Questions to answer upon waking up</string>
    <string name="napDesc">Questions to answer after a nap</string>
    <string name="bedtimeDesc">Questions to answer at bedtime</string>
    <string name="notificationDesc">Notifications</string>
    <string name="infoDesc">Information about you</string>
    <string name="questionDesc">Questions</string>
    <string name="getnotif">Get Notification</string>
    <string name="startStopTimer">Pause Timer</string>
    <string name="initialTimer">30:00</string>
    <string name="end">End</string>
    <string name="cont">Continue Therapy</string>
    <string name="endTherapy">End Therapy</string>
    <string name="warning">WARNING</string>
    <string name="incomplete">You have not completed the light therapy.  Are you sure you wish to continue?</string>
    <string name="thankYou">Thank you</string>
    <string name="returnHome">Return Home</string>
    <string name="wakeUpTime">Wake-up Time:</string>
    <string name="enterTimeHere">Enter Time Here</string>
    <string name="sleepDifficulty">I had difficultly falling asleep</string>
    <string name="duringNight">I kept waking up during the night</string>
    <string name="tooEarly">I woke up too early and couldn\'t get back to sleep</string>
    <string name="submit">Submit</string>
    <string name="napDuringDay">Did you nap during the day?</string>
    <string name="firstNap">1st Nap</string>
    <string name="responseRecorded">Your response has been recorded</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="secondNap">2nd Nap</string>
    <string name="thirdNap">3rd Nap</string>
    <string name="bedTime">Bed Time:</string>
    <string name="bedtimeFatigue">In the last 24 hours, what was your average level of fatigue? </string>
    <string name="fatigueExplanation">Please enter a number from 0 to 10; 0 means no fatigue, 10 means worst fatigue</string>
    <string name="bedtimeSleepiness">During the day, what was your average level of sleepiness?</string>
    <string name="sleepinessExplanation">Please enter a number from 0 to 10; 0 means no sleepiness, 10 means worst sleepiness</string>
    <string name="my_info">My Info</string>
    <string name="name">Name</string>
    <string name="nameInput">Name:</string>
    <string name="submit_info">Submit</string>
    <string name="nameDisplay">Name:</string>
    <string name="nameFIllDisplay">*NAME*</string>
    <string name="doctor">Doctor:</string>
    <string name="doctor_name">*DOCTOR NAME*</string>
    <string name="set">Set</string>
    <string name="id">ID: </string>
    <string name="blank"> </string>
    <string name="change">Change ID</string>
    <string name="enter_id">Enter ID: </string>
    <string name="enter_birthday">Enter Birthday: </string>
    <string name="format">Please use MM/DD/YYYY as the format</string>
    <string name="confirm">Confirm</string>
    <string name="redo_message">The ID and birthday combination you entered is incorrect.  Please try again.</string>
    <string name="reenter">Re-Enter ID</string>
    <string name="notif_text">Notification</string>
    <string name="menu_intro">Introduction Video</string>
    <string name="menu_howto">How To Use Video</string>
    <string name="how_to_video">How To Video</string>
    <string name="introduction_video">Introduction Video</string>
    <string name="set_time_use">Please use 24-hour time format.  For example, 9:00PM should be entered as 21:00.</string>
    <string name="back_to_home">Back To Home</string>
    <string name="back">Back</string>
</resources>