<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/myInfo"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:gravity="center"
        android:text="@string/my_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/namePatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/myInfo"
        android:text="@string/nameDisplay"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/insertName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/myInfo"
        android:layout_alignEnd="@id/namePatient"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="-176dp"
        android:text="@string/nameFIllDisplay"
        android:textSize="30sp" />

    <View
        android:id="@+id/spacerTwo2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/namePatient" />

    <TextView
        android:id="@+id/nameDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spacerTwo2"
        android:text="@string/doctor"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/insertDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameDoctor"
        android:layout_alignEnd="@id/nameDoctor"
        android:layout_marginTop="-42dp"
        android:layout_marginEnd="-258dp"
        android:text="@string/doctor_name"
        android:textSize="30sp" />

    <View
        android:id="@+id/spacerTwo3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/insertDoctor" />

</RelativeLayout>