<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThankYouActivity">

    <TextView
        android:id="@+id/thankYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/thankYou"
        android:textColor="#000000"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/responseRecorded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/thankYou"
        android:layout_centerInParent="true"
        android:text="@string/responseRecorded"
        android:textColor="#000000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/returnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/responseRecorded"
        android:layout_centerHorizontal="true"
        android:text="@string/returnHome"
        android:textSize="30sp"
        app:backgroundTint="#4CAF50" />

</RelativeLayout>